fixed nav slide in spacing issue

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -29,7 +29,7 @@
 .Nav__slide-in {
   position: fixed;
   margin-top: var(--navbar-height);
-  width: min-content;
+  width: var(--slide-in-width);
   height: 100vh;
   background: rgba(128, 128, 128, 0.804);
   text-align: left;
